# alpentune

./: .gitattributes  CMakeLists.txt  README.md  flake.nix  meson.build  meson_options.txt
benchmarks/: alpentune_benchmark.cpp
fuzz/: alpentune_fuzz.cpp
include/alpentune/: alpentune.h
include/alpentune/backend/: alsa.h
src/: alpentune.c
src/backend/: alsa.c
tests/: alpentune_test.cpp  playback_test.c
