option(
  'AT_BUILD_SHARED',
  type: 'boolean',
  value: 'true',
  description: 'Build shared library'
)

option(
  'AT_BUILD_STATIC',
  type: 'boolean',
  value: 'false',
  description: 'Build static library'
)

option(
  'AT_BUILD_TESTS',
  type: 'boolean',
  value: 'true',
  description: 'Build tests'
)

option(
  'AT_BUILD_OPTIMIZED',
  type: 'boolean',
  value: 'false',
  description: 'Build optimized'
)

option(
  'AT_BUILD_OPTIMIZED_AGGRESSIVE',
  type: 'boolean',
  value: 'false',
  description: 'Build with maximum optimization'
)

option(
  'AT_BACKEND_ALSA',
  type: 'boolean',
  value: 'true',
  description: 'Build with ALSA backend'
)
